oscen-macros/tests/ui/invalid_rate.stderr
error: rate factor must be 1, 2, 4, or 8
 --> tests/ui/invalid_rate.rs:7:53
  |
7 |         osc = PolyBlepOscillator::saw(440.0, 0.6) * 3;  // 3 is not in {1, 2, 4, 8}
  |                                                     ^

warning: unused import: `PolyBlepOscillator`
 --> tests/ui/invalid_rate.rs:1:20
  |
1 | use oscen::{graph, PolyBlepOscillator};
  |                    ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
